--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>PORTFOLIO</title>
 </head>
 <body>
-    <h1>hello my name is kishore</h1>
+    <div style="width: 600px; height: 40px; background-color: rgb(131, 138, 141); text-align: center;">
+    <h1 style="color: white;">KISHORE</h1>
+</div>
+<div style="width: 600px; height: 500px; background-color: aqua;">
+    
+
+</div>
 </body>
 </html>
